no failed: wireguard over ipv6
qc pass: wireguard over ipv6
---------------------------------- 2025-10-08 07:18:04 25.10.8
no qc pass: wireguard over asymmetric ports
failed: wireguard over asymmetric ports
---------------------------------- 2025-10-08 07:44:20 25.10.8
no failed: wireguard over asymmetric ports
qc pass: wireguard over asymmetric ports
---------------------------------- 2025-10-14 09:34:35 25.10.14
no qc pass: wireguard over asymmetric ports
failed: wireguard over asymmetric ports
---------------------------------- 2025-10-14 10:56:17 25.10.14
no failed: wireguard over asymmetric ports
qc pass: wireguard over asymmetric ports
---------------------------------- 2025-10-14 21:25:32 25.10.14
no qc pass: wireguard over asymmetric ports
failed: wireguard over asymmetric ports
---------------------------------- 2025-10-15 05:01:24 25.10.15
no failed: wireguard over asymmetric ports
qc pass: wireguard over asymmetric ports
---------------------------------- 2025-10-16 10:02:28 25.10.16
no qc pass: wireguard over asymmetric ports
failed: wireguard over asymmetric ports
---------------------------------- 2025-10-16 10:39:58 25.10.16
no failed: wireguard over asymmetric ports
qc pass: wireguard over asymmetric ports
---------------------------------- 2025-10-20 08:48:05 25.10.20
no qc pass: dhcp with excluded address
failed: dhcp with excluded address
---------------------------------- 2025-10-20 10:05:15 25.10.20
no failed: dhcp with excluded address
qc pass: dhcp with excluded address
---------------------------------- 2025-10-22 13:08:41 25.10.22
no qc pass: wireguard over ipv6
failed: wireguard over ipv6
---------------------------------- 2025-10-22 13:52:26 25.10.22
no failed: wireguard over ipv6
qc pass: wireguard over ipv6
---------------------------------- 2025-10-23 09:31:09 25.10.23
no todo: tcp selective ack
---------------------------------- 2025-10-23 11:44:27 25.10.23
qc pass: ppp over rlogin
qc pass: ppp over tcp without sack