@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v25.10.23-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-10-23 12:01:37, took 00:17:10, with 50 workers, on 4056 cases, 0 failed, 0 traces, 7 retries
+-;-;-;2025-10-23 12:33:14, took 00:13:49, with 50 workers, on 4062 cases, 0 failed, 0 traces, 3 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -432,6 +432,12 @@ http://sources.freertr.org/cfg/conn-stp.tst;conn-stp.tst;success;spantree over e
 http://sources.freertr.org/cfg/conn-stun.tst;conn-stun.tst;success;ppp over stun
 http://sources.freertr.org/cfg/conn-tcp01.tst;conn-tcp01.tst;success;ppp over tcp
 http://sources.freertr.org/cfg/conn-tcp02.tst;conn-tcp02.tst;success;ppp over tcp without sack
+http://sources.freertr.org/cfg/conn-tcp03.tst;conn-tcp03.tst;success;ppp over tcp with sack
+http://sources.freertr.org/cfg/conn-tcp04.tst;conn-tcp04.tst;success;ppp over tcp with asymmetric sack
+http://sources.freertr.org/cfg/conn-tcp05.tst;conn-tcp05.tst;success;ppp over tcp with ecn
+http://sources.freertr.org/cfg/conn-tcp06.tst;conn-tcp06.tst;success;ppp over tcp without ecn
+http://sources.freertr.org/cfg/conn-tcp07.tst;conn-tcp07.tst;success;ppp over tcp with timestamp
+http://sources.freertr.org/cfg/conn-tcp08.tst;conn-tcp08.tst;success;ppp over tcp without timestamp
 http://sources.freertr.org/cfg/conn-tdmou01.tst;conn-tdmou01.tst;success;tdmoudp with middle channels
 http://sources.freertr.org/cfg/conn-tdmou02.tst;conn-tdmou02.tst;success;ppp with tdmoudp
 http://sources.freertr.org/cfg/conn-tdmou03.tst;conn-tdmou03.tst;success;hdlc with tdmoudp
