@@ -428,6 +428,12 @@ qc pass: spantree over ethernet
 qc pass: ppp over stun
 qc pass: ppp over tcp
 qc pass: ppp over tcp without sack
+qc pass: ppp over tcp with sack
+qc pass: ppp over tcp with asymmetric sack
+qc pass: ppp over tcp with ecn
+qc pass: ppp over tcp without ecn
+qc pass: ppp over tcp with timestamp
+qc pass: ppp over tcp without timestamp
 qc pass: tdmoudp with middle channels
 qc pass: ppp with tdmoudp
 qc pass: hdlc with tdmoudp
