@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.10.23-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-10-23 12:01:37, took 00:17:10, with 50 workers, on 4056 cases, 0 failed, 0 traces, 7 retries<br/>
+tested: 2025-10-23 12:33:14, took 00:13:49, with 50 workers, on 4062 cases, 0 failed, 0 traces, 3 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -444,6 +444,12 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-stun.tst">conn-stun.tst</a></td><td>success</td><td>ppp over stun</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-tcp01.tst">conn-tcp01.tst</a></td><td>success</td><td>ppp over tcp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-tcp02.tst">conn-tcp02.tst</a></td><td>success</td><td>ppp over tcp without sack</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-tcp03.tst">conn-tcp03.tst</a></td><td>success</td><td>ppp over tcp with sack</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-tcp04.tst">conn-tcp04.tst</a></td><td>success</td><td>ppp over tcp with asymmetric sack</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-tcp05.tst">conn-tcp05.tst</a></td><td>success</td><td>ppp over tcp with ecn</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-tcp06.tst">conn-tcp06.tst</a></td><td>success</td><td>ppp over tcp without ecn</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-tcp07.tst">conn-tcp07.tst</a></td><td>success</td><td>ppp over tcp with timestamp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-tcp08.tst">conn-tcp08.tst</a></td><td>success</td><td>ppp over tcp without timestamp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-tdmou01.tst">conn-tdmou01.tst</a></td><td>success</td><td>tdmoudp with middle channels</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-tdmou02.tst">conn-tdmou02.tst</a></td><td>success</td><td>ppp with tdmoudp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-tdmou03.tst">conn-tdmou03.tst</a></td><td>success</td><td>hdlc with tdmoudp</td></tr>
